--- a/ToDoListProject/Layout/NavMenu.razor
+++ b/ToDoListProject/Layout/NavMenu.razor
@@ -38,12 +38,13 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span>
                         @if (_editingListId == list.Id)
                         {
-                            <input class="form-control" 
-                                   @bind="_editingListName"
-                                   @bind:event="oninput"
-                                   @onkeydown="@(e => HandleKeyDown(e, list))"
-                                   @onfocusout="@(() => FinishEditing(list))"
-                                   style="width: 100%; height: 100%;" />
+                            <form @onsubmit="@((e) => FinishEditing(list))" style="width: 100%;">
+                                <input class="form-control" 
+                                       @bind="_editingListName"
+                                       @bind:event="oninput"
+                                       @onfocusout="@(() => FinishEditing(list))"
+                                       style="width: 100%; height: 100%;" />
+                            </form>
                         }
                         else
                         {
@@ -111,7 +112,7 @@
             _editingListId = newList.Id;
             _editingListName = "";
             StateHasChanged();
-            await Task.Delay(50);
+
             await FocusNewInput(newList.Id);
         }
     }
@@ -119,14 +120,6 @@
     private async Task FocusNewInput(string listId)
     {
         await JS.InvokeAsync<object>("focusNewInput", listId);
-    }
-
-    private async Task HandleKeyDown(KeyboardEventArgs e, ToDoListModel list)
-    {
-        if (e.Key == "Enter")
-        {
-            await FinishEditing(list);
-        }
     }
 
     private async Task FinishEditing(ToDoListModel list)
