--- a/ToDoListProject/Pages/Auth/Login.razor
+++ b/ToDoListProject/Pages/Auth/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/login"
 @using ToDoListProject.Services
 @inject NavigationService Navigation
+@inject ApiService ApiService
 
 <h3>Login</h3>
 
