--- a/ToDoListProject/Pages/Auth/Register.razor
+++ b/ToDoListProject/Pages/Auth/Register.razor
@@ -1,6 +1,7 @@
 ﻿@page "/register"
 @using ToDoListProject.Services
 @inject NavigationService Navigation
+@inject ApiService ApiService
 
 <h3>Register</h3>
 
