--- a/ToDoListProject/Layout/NavMenu.razor
+++ b/ToDoListProject/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@using ToDoListProject.Models
+﻿@using ToDoList.Shared.Models;
 @using ToDoListProject.Pages
 @using ToDoListProject.Services
 @inject ToDoService ToDoService
