--- a/ToDoListProject/Pages/ToDoListComponent.razor
+++ b/ToDoListProject/Pages/ToDoListComponent.razor
@@ -1,5 +1,5 @@
 ﻿@page "/list/{ListId}"
-@using ToDoListProject.Models
+@using ToDoList.Shared.Models
 @using ToDoListProject.Services
 @inject ToDoService ToDoService
 
