--- a/ToDoListProject/Pages/Auth/Register.razor
+++ b/ToDoListProject/Pages/Auth/Register.razor
@@ -5,6 +5,11 @@
 
 <h3>Register</h3>
 
+@if (!string.IsNullOrEmpty(_errorMessage))
+{
+    <div class="alert alert-danger">@_errorMessage</div>
+}
+
 <EditForm Model="@_registerModel" OnValidSubmit="HandleRegistration">
     <DataAnnotationsValidator />
     @* <ValidationSummary /> *@
@@ -12,14 +17,17 @@
     <div class="form-group">
         <label for="username">Username:</label>
         <InputText id="username" @bind-Value="_registerModel.Username" class="form-control" />
+        <ValidationMessage For="@(() => _registerModel.Username)" />
     </div>
     <div class="form-group">
         <label for="email">Email:</label>
         <InputText id="email" @bind-Value="_registerModel.Email" class="form-control" />
+        <ValidationMessage For="@(() => _registerModel.Email)" />
     </div>
     <div class="form-group">
         <label for="password">Password:</label>
         <InputText id="password" @bind-Value="_registerModel.Password" class="form-control" type="password" />
+        <ValidationMessage For="@(() => _registerModel.Password)" />
     </div>
     <button type="submit" class="btn btn-primary">Register</button>
 </EditForm>
