--- a/ToDoListProject/Pages/Auth/Login.razor
+++ b/ToDoListProject/Pages/Auth/Login.razor
@@ -15,6 +15,12 @@
                         <h3 class="text-center font-weight-bold" style="color: #333333;">Login</h3>
                     </div>
                     <div class="card-body">
+
+                        @if (!string.IsNullOrEmpty(_errorMessage))
+                        {
+                            <div class="alert alert-danger">@_errorMessage</div>
+                        }
+
                         <!-- Username -->
                         <div class="form-group mb-4">
                             <InputText class="form-control" placeholder="Username" @bind-Value="_loginModel.Username" />
