--- a/ToDoListProject/Layout/MainLayout.razor
+++ b/ToDoListProject/Layout/MainLayout.razor
@@ -1,14 +1,34 @@
-﻿@inherits LayoutComponentBase
+﻿@using ToDoListProject.Services
+@using System.Security.Claims
+@inherits LayoutComponentBase
+@inject NavigationService Navigation
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+    <AuthorizeView>
+        <Authorized>
+            <div class="sidebar">
+                <NavMenu />
+            </div>
+        </Authorized>
+    </AuthorizeView>
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+            <AuthorizeView>
+                <Authorized>
+                    <span>Welcome, @DisplayInfo(context.User.Claims.ToList())!</span>
+                    <button class="btn btn-link" @onclick="HandleLogout">Logout</button>
+                </Authorized>
+                <NotAuthorized>
+                    <NavLink class="btn btn-link" href="register">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Register
+                    </NavLink>
+                    <NavLink class="btn btn-link" href="login">
+                        <span class="oi oi-account-login" aria-hidden="true"></span> Login
+                    </NavLink>
+                </NotAuthorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
@@ -16,3 +36,16 @@
         </article>
     </main>
 </div>
+
+@code {
+    private string DisplayInfo(List<Claim> claims)
+    {
+        var username = claims.Where(u => u.Type.Equals("Username")).Select(u => u.Value).FirstOrDefault();
+        return username;
+    }
+
+    private async Task HandleLogout()
+    {
+        
+    }
+}
