--- a/ToDoListProject/_Imports.razor
+++ b/ToDoListProject/_Imports.razor
@@ -11,3 +11,4 @@
 @using Blazorise
 @using Blazorise.Bootstrap
 @using Blazorise.Icons.FontAwesome
+@using Microsoft.AspNetCore.Components.Authorization
