--- a/ToDoListProject/Pages/ToDoListComponent.razor
+++ b/ToDoListProject/Pages/ToDoListComponent.razor
@@ -2,6 +2,7 @@
 @using ToDoList.Shared.Models
 @using ToDoListProject.Services
 @inject ToDoService ToDoService
+@inject ApiService ApiService
 
 <div>
     @if (ToDoListModel == null)
